--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -23,7 +23,8 @@
     height: 300px;
     width: 300px;
     border-radius: 190px;
-    margin-top: 50px;
+    margin-top: 80px;
+    margin-left: 130px;
     border: 5px solid gray;
     object-fit: cover;
 
