--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -1,17 +1,29 @@
 .home{
+
     height: 400px;
-    color: white;
-    /* background-color: aliceblue; */
+    color: rgb(61, 57, 57);
+    /* border: solid 3px black; */
+    /* background-color: rgb(161, 183, 202); */
+    width:100%;
+    border-radius: 10px;
 }
 
 .home-content{
  
-   
+     /* box-shadow: 15px 19px 9px -2px rgba(255, 3, 3, 0.5); */
+    -webkit-box-shadow: 15px 9px 9px -2px rgba(74, 66, 66, 0.50);
+    /* -moz-box-shadow: 15px 9px 9px -2px rgba(0, 255, 13, 0.5); */
+    margin-top: 30px;
     padding: 10px;
     margin-top: 100px;
+    margin-left: 18%;
 
 
 } 
+
+.dark-text {
+    color: white;
+}
 
 .home-content h3{
     margin-top: 30px;
@@ -68,6 +80,7 @@
 }
 
 .theme-change{
+    
     justify-content: center;
     height: 50px;
     width: 50px;
