--- a/client/src/components/sidebar/SidebarList.css
+++ b/client/src/components/sidebar/SidebarList.css
@@ -1,3 +1,27 @@
+.navbar-items {
+    position: fixed;       /* stays in place even when scrolling */
+    top: 0;                /* start at the very top of the page */
+    left: 0;               /* stick to the left edge */
+    height: 100vh;         /* full viewport height */
+    width: 250px;          /* adjust for expanded view */
+    background-color: rgba(51, 73, 73, 0.5); /* transparent */
+    z-index: 999;          /* layer it above other content */
+    overflow-y: auto;      /* scroll if content is taller than screen */
+    
+}
+
+.navbar-items-only-icons {
+    position: fixed;       /* stays in place even when scrolling */
+    top: 0;                /* start at the very top of the page */
+    left: 0;               /* stick to the left edge */
+    height: 100vh;         /* full viewport height */
+    width: 95px;          /* adjust for expanded view */
+    background-color: rgba(51, 73, 73, 0.5); /* transparent */
+    z-index: 999;          /* layer it above other content */
+    overflow-y: auto;      /* scroll if content is taller than screen */
+    overflow-x: hidden;
+}
+
 .sidebar-profile-pic img{
 
     border-radius: 90px;
