adjusted about section positioning

--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -31,12 +31,14 @@
 }
 
 .about-details {
-    margin-top: 50px;
+    margin-right: 90px;
+    margin-top: 30px;
 }
 
 .about-title h5{
 
     text-align: center;
+
 
 }
 
